--- a/requirements.txt
+++ b/requirements.txt
@@ -10,4 +10,8 @@ joblib==1.3.2
 chromadb==0.4.22
 together==0.2.11
 statsmodels==0.14.1
-pillow==10.2.0 
+pillow==10.2.0
+langchain==0.1.12
+langchain-community==0.0.27
+langchain-core==0.1.31
+python-dotenv==1.0.1 
