--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,7 @@ lib64/
 parts/
 sdist/
 var/
+wheels/
 *.egg-info/
 .installed.cfg
 *.egg
@@ -33,8 +34,14 @@ ENV/
 *.swp
 *.swo
 
+# Environment variables
+.env
+
 # Streamlit
 .streamlit/
+
+# Vercel
+.vercel/
 
 # Data files
 *.csv
