--- a/requirements.txt
+++ b/requirements.txt
@@ -8,4 +8,11 @@ joblib==1.3.2
 python-dotenv==1.0.1
 langchain==0.1.12
 langchain-community==0.0.27
-langchain-core==0.1.31 
+langchain-core==0.1.31
+seaborn==0.13.2
+matplotlib==3.8.3
+statsmodels==0.14.1
+pillow==10.2.0
+chromadb==0.4.24
+together==0.2.11
+pathlib==1.0.1 
