--- a/requirements.txt
+++ b/requirements.txt
@@ -1,32 +1,22 @@
-attr==0.3.2
-chromadb==0.5.13
-colorama==0.4.6
-ConfigParser==7.2.0
-cryptography==44.0.2
-docutils==0.21.2
-filelock==3.18.0
-HTMLParser==0.0.2
-ipython==8.12.3
-ipywidgets==8.1.6
-jnius==1.1.0
-joblib==1.4.2
-keyring==25.6.0
-langchain==0.3.24
-langchain_community==0.3.22
-matplotlib==3.10.1
-numpy==2.2.5
-pandas==2.2.3
-Pillow==11.2.1
-plotly==6.0.1
-protobuf==6.30.2
-pyOpenSSL==25.0.0
-python-dotenv==1.1.0
-redis==5.2.1
-seaborn==0.13.2
-Sphinx==8.2.3
-statsmodels==0.14.4
 streamlit==1.44.1
-thread==2.0.5
+pandas==2.2.3
+numpy==1.26.4
+plotly==6.0.1
+scikit-learn==1.4.1
+xgboost==2.0.3
+joblib==1.4.2
+python-dotenv==1.1.0
+langchain==0.3.24
+langchain-community==0.3.22
+langchain-core==0.1.31
+seaborn==0.13.2
+matplotlib==3.10.1
+statsmodels==0.14.4
+Pillow==11.2.1
+chromadb==0.5.13
 together==1.5.5
-urllib3_secure_extra==0.1.0
-xmlrpclib==1.0.1
+protobuf==6.30.2
+colorama==0.4.6
+filelock==3.18.0
+ipython==8.12.3
+cryptography==44.0.2
