--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@ streamlit==1.44.1
 pandas==2.2.3
 numpy==1.26.4
 plotly==6.0.1
-scikit-learn==1.4.1
+scikit-learn==1.3.2
 xgboost==2.0.3
 joblib==1.4.2
 python-dotenv==1.1.0
@@ -20,3 +20,5 @@ colorama==0.4.6
 filelock==3.18.0
 ipython==8.12.3
 cryptography==44.0.2
+setuptools>=68.0.0
+wheel>=0.40.0
