--- a/requirements.txt
+++ b/requirements.txt
@@ -15,7 +15,7 @@ statsmodels==0.14.4
 Pillow==11.2.1
 chromadb==0.5.13
 together==1.5.5
-protobuf==6.30.2
+protobuf>=3.20,<6.0
 colorama==0.4.6
 filelock==3.18.0
 ipython==8.12.3
