--- a/requirements.txt
+++ b/requirements.txt
@@ -6,9 +6,9 @@ scikit-learn==1.3.2
 xgboost==2.0.3
 joblib==1.4.2
 python-dotenv==1.1.0
-langchain==0.3.24
-langchain-community==0.3.22
-langchain-core==0.1.31
+langchain>=0.3.24
+langchain-community>=0.3.22
+langchain-core>=0.3.55
 seaborn==0.13.2
 matplotlib==3.10.1
 statsmodels==0.14.4
@@ -22,3 +22,4 @@ ipython==8.12.3
 cryptography==44.0.2
 setuptools>=68.0.0
 wheel>=0.40.0
+threadpoolctl>=2.0.0
